@@ -1,4 +1,5 @@
 Development
+    Fix stop in network/streaming mode
     Make sure mplayer is dead before quitting
     Try and solve the apple trailer issues, still may have issues
     When playing an ICY stream, clear the album metadata fixes problem when switching from MP3 to stream
